specs cleanup, minor fixes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,7 +5,7 @@ en:
   general:
     cancel: Cancel
     create: Create
-    save: Save"
+    save: Save
     saving: Saving…
     update: Update
     delete: Delete
