refactored ajax error message

--- a/config/locales/devise/ru.yml
+++ b/config/locales/devise/ru.yml
@@ -112,7 +112,7 @@ ru:
       not_found: "не найдена"
       not_locked: "не заблокирована"
       not_saved:
-        one: "%{resource}: сохранение не удалось из-за %{count} ошибки"
-        few: "%{resource}: сохранение не удалось из-за %{count} ошибок"
-        many: "%{resource}: сохранение не удалось из-за %{count} ошибок"
-        other: "%{resource}: сохранение не удалось из-за %{count} ошибки"
+        one: "Сохранение не удалось из-за %{count} ошибки"
+        few: "Сохранение не удалось из-за %{count} ошибок"
+        many: "Сохранение не удалось из-за %{count} ошибок"
+        other: "Сохранение не удалось из-за %{count} ошибки"
