--- a/config/locales/models/competitors.ru.yml
+++ b/config/locales/models/competitors.ru.yml
@@ -16,9 +16,9 @@ ru:
             wingsuit:
               blank: Костюм должен быть заполнен
             profile:
-              blank: "Не заполнено обязательное поле 'Профиль пилота'"
+              blank: Не заполнено обязательное поле "Профиль пилота"
             section:
-              blank: "Не заполнено обязательное поле 'Класс'"
+              blank: Не заполнено обязательное поле "Класс"
             base:
               restrict_dependent_destroy:
                 many: Для удаления участника необходимо сначала удалить его результаты.
