--- a/config/locales/devise/de.yml
+++ b/config/locales/devise/de.yml
@@ -113,5 +113,5 @@ de:
       not_found: "nicht gefunden"
       not_locked: "ist nicht gesperrt"
       not_saved:
-        one: "Konnte %{resource} nicht speichern: ein Fehler."
-        other: "Konnte %{resource} nicht speichern: %{count} Fehler."
+        one: "Konnte nicht speichern: ein Fehler."
+        other: "Konnte nicht speichern: %{count} Fehler."
