--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -113,5 +113,5 @@ en:
       not_found: "not found"
       not_locked: "was not locked"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 error prohibited this operation from being completed:"
+        other: "%{count} errors prohibited this operation from being completed:"
