--- a/config/locales/views/charts/spd_chart.ru.yml
+++ b/config/locales/views/charts/spd_chart.ru.yml
@@ -7,7 +7,7 @@ ru:
       series:
         ground: 'Путевая скорость'
         raw_ground: 'Путевая скорость (Нефильтр.)'
-        vertical: 'Верт. Скорость'
+        vertical: 'Верт. скорость'
         raw_vertical: 'Верт. скорость (Нефильтр.)'
         full: 'Полная скорость'
         raw_full: 'Полная скорость (Нефильтр.)'
