displaying wind effect on gr and speed chart

--- a/config/locales/views/charts/gr_chart.en.yml
+++ b/config/locales/views/charts/gr_chart.en.yml
@@ -1,7 +1,8 @@
 en:
   charts:
     gr:
-      title: 'Glide ratio'
+      title: Glide ratio
       series:
-        gr: 'Glide ratio'
+        gr: Glide ratio
         raw_gr: 'G/R (Raw)'
+        wind_effect: Wind effect
