--- a/config/locales/views/charts/gr_chart.ru.yml
+++ b/config/locales/views/charts/gr_chart.ru.yml
@@ -1,7 +1,8 @@
 ru:
   charts:
     gr:
-      title: 'Качество полета'
+      title: Качество полета
       series:
-        gr: 'Качество'
+        gr: Качество
         raw_gr: 'Качество (Нефильтр.)'
+        wind_effect: Влияние ветра
