--- a/config/locales/views/charts/spd_chart.ru.yml
+++ b/config/locales/views/charts/spd_chart.ru.yml
@@ -1,13 +1,14 @@
 ru:
   charts:
     spd:
-      title: 'Вертикальная и горизонтальная скорость'
+      title: Вертикальная и горизонтальная скорость
       axis:
         speed: 'Скорость, %{unit}'
       series:
-        ground: 'Путевая скорость'
-        raw_ground: 'Путевая скорость (Нефильтр.)'
-        vertical: 'Верт. скорость'
-        raw_vertical: 'Верт. скорость (Нефильтр.)'
-        full: 'Полная скорость'
-        raw_full: 'Полная скорость (Нефильтр.)'
+        ground: Путевая скорость
+        raw_ground: Путевая скорость (Нефильтр.)
+        vertical: Верт. скорость
+        raw_vertical: Верт. скорость (Нефильтр.)
+        full: Полная скорость
+        raw_full: Полная скорость (Нефильтр.)
+        wind_effect: Влияние ветра
