--- a/config/locales/views/events/show.en.yml
+++ b/config/locales/views/events/show.en.yml
@@ -24,8 +24,9 @@ en:
       delete_result: 'Delete result'
       toggle_new_track: 'upload new one'
       toggle_existed_track: 'select existed track'
-      event_sponsors: 'Event sponsors'
-      add_sponsor: 'Add sponsor'
+      event_sponsors: Event sponsors
+      add_sponsor: Add sponsor
+      copy_sponsors: Copy sponsors
       judges: 'Judges'
       add_judge: 'Add judge'
       weather_data: 'Wind conditions'
