--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -5,26 +5,6 @@ es:
         last_name: "Apellido:"
         first_name: "Nombre:"
         userpic: "Avatar:"
-  application:
-    header:
-      home: 'SKY DERBY'
-      tracks: 'Lista de pistas'
-      about: 'Sobre el proyecto'
-      sign_in: 'Ingresar'
-      sign_up: 'Registrarse'
-      sign_out: 'Salir'
-      login_email: 'Correo electrónico'
-      password: 'Сontraseña'
-      remember_me: 'Recordarme'
-      forgot_pass: 'Olvidaste la contraseña?'
-      admin_panel: 'Panel del administrador'
-      profile: 'Perfil'
-      track_analizer: "Análisis de pistas"
-      upload_track: "Descargar la pista"
-      competitions: "Las competiciones"
-    footer:
-      owner: 'Alejandro Kunin'
-      fb_page: "La página de la aplicación"
   tracks:
     show:
       title_track: 'La pista'
@@ -73,7 +53,7 @@ es:
           file_size_w1_html: "'La dimensión del archivo: '"
           file_size_w2_html: "'El  tamaño  del archivo no debe superar 1Mb'"
         kind: "El tipo de salto"
-      desc: "El análisis de GPS-pistas y la organización de las competiciones en el formato GPS Performance."
+      desc: "El más avanzado análisis de vuelo y puntajes de competencia"
       goto_event: "A la pagina web del evento >>"
       stats: "Estadísticas:"
       stats_tracks: "Pistas subidas:"
