--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -38,7 +38,7 @@ ru:
           file_size_w1_html: "'Размер файла : '"
           file_size_w2_html: "'Размер файла не должен превышать 1 Мб'"
         kind: "Вид прыжка:"
-      desc: "Анализ GPS треков и проведение соревнований в формате GPS Performance."
+      desc: "Профессиональный анализ полетов и проведение соревнований"
       goto_event: "На страницу события >>"
       supported_formats: "Поддерживаемые форматы и приборы"
       stats: "Статистика:"
