fix locales typos and changed de description

--- a/config/locales/views/layouts/header.de.yml
+++ b/config/locales/views/layouts/header.de.yml
@@ -8,7 +8,7 @@ de:
       places: Orte
       about: Über uns
       sign_in: Einloggen
-      sign_up: Registriere'
+      sign_up: Registrieren
       sign_out: Ausloggen
       login_email: E-Mail Adresse
       password: Passwort
