--- a/config/locales/views/static_pages/index.de.yml
+++ b/config/locales/views/static_pages/index.de.yml
@@ -38,7 +38,7 @@ de:
           file_size_w1_html: "'Dateigröße: '"
           file_size_w2_html: "'Die Datei darf nicht größer als 1MB sein'"
         kind: "Art des Sprunges:"
-      desc: "Analyse von GPS-Tracks und Durchführung von GPS Performance Wettkämpfen."
+      desc: Modernste Fluganalyse und Wettkampfauswertung
       goto_event: "Gehe zu Wettbewerb >>"
       supported_formats: "Unterstützte GPS Logger und Dateiformate"
       stats: "Statistiken:"
