added year to virtual competitions

--- a/config/locales/views/virtual_competitions/show.ru.yml
+++ b/config/locales/views/virtual_competitions/show.ru.yml
@@ -1,8 +1,9 @@
 ru:
   virtual_competitions:
     show:
-      show_details: 'Нажмите для просмотра деталей трека'
-      show_profile: 'Нажмите для просмотра профиля пилота'
+      show_details: Нажмите для просмотра деталей трека
+      show_profile: Нажмите для просмотра профиля пилота
+      overall: За все время
     tasks:
       speed: 'Цель: лететь с максимально возможной горизонтальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
       distance: 'Цель: пролететь максимальное расстояние находясь в зачетном окне (%{range_from} - %{range_to} м)'
