--- a/config/locales/views/virtual_competitions/show.en.yml
+++ b/config/locales/views/virtual_competitions/show.en.yml
@@ -3,6 +3,7 @@ en:
     show:
       show_details: Click to view track details
       show_profile: Click to view profile
+      overall: Overall
     tasks:
       speed: Task is to fly as fast as possible horizontally over the ground through the competition window (%{range_from} - %{range_to} m)
       distance: Task is to fly as far as possible through the competition window (%{range_from} - %{range_to} m)
