--- a/config/locales/views/events/round_map.en.yml
+++ b/config/locales/views/events/round_map.en.yml
@@ -5,3 +5,5 @@ en:
         competitor: Competitor
         direction: Track
         group: Group
+        start_window_description: point, where competitor entered competition window (%{altitude} meters)
+        end_window_description: point, where competitor leaved competition window (%{altitude} meters)
