added disqualification from online competitions to track

--- a/config/locales/models/tracks.en.yml
+++ b/config/locales/models/tracks.en.yml
@@ -12,3 +12,4 @@ en:
         comment: Comment
         uploaded_at: Uploaded at
         recorded_at: Recorded at
+        disqualified_from_online_competitions: Disqualified from online competitions
