--- a/config/locales/models/tracks.ru.yml
+++ b/config/locales/models/tracks.ru.yml
@@ -12,3 +12,4 @@ ru:
         comment: Комментарий
         uploaded_at: Дата загрузки
         recorded_at: Дата записи
+        disqualified_from_online_competitions: Дисквалифицирован из онлайн соревнований
