implemented default view for online competitions

--- a/config/locales/views/virtual_competitions/show.ru.yml
+++ b/config/locales/views/virtual_competitions/show.ru.yml
@@ -3,6 +3,7 @@ ru:
     show:
       show_details: Нажмите для просмотра деталей трека
       show_profile: Нажмите для просмотра профиля пилота
+    navbar:
       overall: За все время
     tasks:
       speed: 'Цель: лететь с максимально возможной горизонтальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
