--- a/config/locales/models/events.en.yml
+++ b/config/locales/models/events.en.yml
@@ -11,6 +11,7 @@ en:
         rules: Rules
         wind_cancellation: Wind cancellation
         visibility: Visibility
+        number_of_results_for_total: Number of jumps for total
   event_status: 
     draft: Draft
     published: Published
