--- a/config/locales/views/virtual_competitions/show.en.yml
+++ b/config/locales/views/virtual_competitions/show.en.yml
@@ -1,6 +1,6 @@
 en:
   virtual_competitions:
-    show:
+    scoreboard:
       show_details: Click to view track details
       show_profile: Click to view profile
     navbar:
