added blankslates to profiles

--- a/config/locales/views/profiles/show.en.yml
+++ b/config/locales/views/profiles/show.en.yml
@@ -3,3 +3,5 @@ en:
     show:
       achievements: Achievements
       online_competitions: Online competitions
+      no_badges: "%{name} do not have badges yet."
+      no_rankings: "%{name} didn't participate online competitions this year."
