Competition headers translation

--- a/config/locales/views/static_pages/index.en.yml
+++ b/config/locales/views/static_pages/index.en.yml
@@ -1,5 +1,9 @@
 en:
   static_pages:
+    online_competitions_section:
+      competitions_header:
+        base: BASE competitions
+        skydive: Skydive competitions
     index:
       title: "Fly! Compete! Win!"
       subtitle: "It's still Beta"
