event_organizers to organizers

--- a/config/locales/models/organizers.de.yml
+++ b/config/locales/models/organizers.de.yml
@@ -1,13 +1,13 @@
 de:
   activerecord:
     models:
-      event_organizer: Organisator
+      organizer: Organisator
     attributes:
-      event_organizer:
+      organizer:
         profile: Profil
     errors:
       models:
-        event_organizer:
+        organizer:
           attributes:
             profile: Es muss ein Profil ausgewählt werden
             base:
