--- a/config/locales/views/virtual_competitions/show.ru.yml
+++ b/config/locales/views/virtual_competitions/show.ru.yml
@@ -12,6 +12,7 @@ ru:
       distance_in_altitude: 'Цель: пролететь максимальное расстояние за %{parameter} метров по высоте'
       straightline_distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек. Расстояние измеряется по прямой линии.'
       time: 'Цель: лететь с минимально возможной вертикальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
+      flare: 'Цель: взлететь на как можно большую высоту'
     place: 'Место проведения:'
     worldwide: 'Всемирные'
     suit: 'Тип костюма: %{suit}'
