--- a/config/locales/views/events/index.ru.yml
+++ b/config/locales/views/events/index.ru.yml
@@ -1,4 +1,5 @@
 ru:
   events:
     index:
+      sign_in_to_create: Войдите или зарегистрируйтеся для создания соревнования
       new: 'Добавление'
