--- a/config/locales/views/static_pages/index.de.yml
+++ b/config/locales/views/static_pages/index.de.yml
@@ -47,4 +47,4 @@ de:
       how_it_works: "So einfach geht's:"
       upload_a_file: "Lade einen Track hoch"
       select_free_fall_range: "Wähle den Freifallbereich"
-      analyze: "Analysiere..."
+      analyze: Werte deine Daten aus…
