--- a/config/locales/views/will_paginate.de.yml
+++ b/config/locales/views/will_paginate.de.yml
@@ -1,5 +1,6 @@
 de:
   will_paginate:
+    load_more: Weitere…
     previous_label: "&#8592; Zurück"
     next_label: "Weiter &#8594;"
     page_gap: "&hellip;"
