--- a/config/locales/views/virtual_competitions/show.en.yml
+++ b/config/locales/views/virtual_competitions/show.en.yml
@@ -1,6 +1,7 @@
 en:
   virtual_competitions:
     scoreboard:
+      result: Result
       show_details: Click to view track details
       show_profile: Click to view profile
     navbar:
