--- a/config/locales/views/events/round_map.ru.yml
+++ b/config/locales/views/events/round_map.ru.yml
@@ -7,3 +7,4 @@ ru:
         group: Группа
         start_window_description: точка, в которой участник вошел в соревновательное окно (%{altitude} метров)
         end_window_description: точка, в которой участник вышел из соревновательного окна (%{altitude} метров)
+        after_exit_description: точка, в которой участник был через 5 секунд после выхода из самолета
