improve competitor form design

--- a/config/locales/views/competitors/form.de.yml
+++ b/config/locales/views/competitors/form.de.yml
@@ -3,3 +3,5 @@ de:
     form:
       select_profile: Wähle ein existierendes Profil
       create_profile: Erstelle ein neues Profil
+      profile: Profil
+      suit_and_category: Suit, Kategorie
