--- a/config/locales/views/layouts/application.en.yml
+++ b/config/locales/views/layouts/application.en.yml
@@ -18,3 +18,7 @@ en:
       competitions: "Competitions"
       online_competitions: 'Online competitions'
       places: 'Places'
+    footer:
+      made_with: 'Made with'
+      owner: 'by Aleksandr Kunin'
+      fb_page: "Application's page"
