--- a/config/locales/views/layouts/application.es.yml
+++ b/config/locales/views/layouts/application.es.yml
@@ -17,3 +17,7 @@ es:
       competitions: Las competiciones
       online_competitions: En línea competiciones
       places: Ubicaciones
+    footer:
+      made_with: Hecho con amor
+      owner: Alejandro Kunin
+      fb_page: La página de la aplicación
