--- a/config/locales/views/layouts/application.de.yml
+++ b/config/locales/views/layouts/application.de.yml
@@ -18,3 +18,6 @@ de:
       admin_panel: Administrator-Panel
       track_analizer: Trackanalyse
       upload_track: Track hochladen
+    footer:
+      owner: 'Aleksandr Kunin'
+      fb_page: "Facebook Seite"
