--- a/config/locales/views/layouts/application.en.yml
+++ b/config/locales/views/layouts/application.en.yml
@@ -1,24 +1,22 @@
 en:
   application:
     header:
-      home: 'SKY DERBY'
-      tracks: 'Tracks'
-      about: 'About project'
-      sign_in: 'Log in'
-      sign_up: 'Sign up'
-      sign_out: 'Sign out'
-      login_email: 'Email address'
-      password: 'Password'
-      remember_me: 'Remember me'
-      forgot_pass: 'Forgot your password?'
-      admin_panel: 'Admin dashboard'
-      profile: 'Profile'
-      track_analizer: "Tracks analyzer"
-      upload_track: "Upload track"
-      competitions: "Competitions"
-      online_competitions: 'Online competitions'
-      places: 'Places'
+      tracks: Tracks
+      about: About project
+      sign_in: Log in
+      sign_up: Sign up
+      sign_out: Sign out
+      login_email: Email address
+      password: Password
+      remember_me: Remember me
+      forgot_pass: Forgot your password?
+      admin_panel: Admin dashboard
+      profile: Profile
+      upload_track: Upload track
+      competitions: Competitions
+      online_competitions: Online competitions
+      places: Places
     footer:
-      made_with: 'Made with'
-      owner: 'by Aleksandr Kunin'
-      fb_page: "Application's page"
+      made_with: Made with
+      owner: by Aleksandr Kunin
+      fb_page: Application's page
