--- a/config/locales/views/layouts/application.de.yml
+++ b/config/locales/views/layouts/application.de.yml
@@ -18,5 +18,6 @@ de:
       track_analizer: Trackanalyse
       upload_track: Track hochladen
     footer:
-      owner: Aleksandr Kunin
+      made_with: Gemacht mit
+      owner: von Aleksandr Kunin
       fb_page: Facebook Seite
