--- a/config/locales/views/static_pages/index.en.yml
+++ b/config/locales/views/static_pages/index.en.yml
@@ -5,50 +5,20 @@ en:
         base: BASE competitions
         skydive: Skydive competitions
     index:
-      title: "Fly! Compete! Win!"
-      subtitle: "It's still Beta"
-      skyderby_is: 'Skyderby - is...'
-      tracks_analysis: 'GPS tracks analysis'
-      tracks_analysis_desc: 'GPS tracks of skydive and b.a.s.e. flights in wingsuit and tracksuit.'
-      tracks_list: 'Browse all tracks'
-      online_competitions: 'Online competitions'
-      online_comp_desc: 'Participate online competitions in Distance, Speed, Time and Distance in time disciplines.'
-      online_comp_list: 'Browse online competitions'
-      events: 'Competitions'
-      events_desc: 'Participate competitions or create your own with full FAI rules support or with your own rules.'
-      events_list: 'Browse competitions'
-      online_comps_leaders: 'Online competitions leaders'
-      donate: 'If you like Skyderby - you can support the project by making a donation.'
+      title: Fly! Compete! Win!
+      desc: The most advanced flight analysis and competition scoring
+      supported_formats: Supported file formats and GPS loggers
+      donate: If you like Skyderby - you can support the project by making a donation.
+      online_comps_leaders: Online competitions leaders
+      how_it_works: It is pretty simple
+      upload_a_file: Upload a file
+      select_free_fall_range: Select free fall range
+      analyze: Analyze
       track_form:
-        title: 'See and analyze your track'
-        name: 'Your name is'
-        name_plh: 'John D.'
-        suit: "You're flying a"
-        suit_plh: 'Wingsuit model'
-        location: 'It was at'
-        location_plh: 'Some DZ, some cliffs, etc'
-        file: 'File with track'
-        help: 'Supported csv (Columbus, FlySight), gpx, tes and kml format'
-        comment: 'Comment'
-        comment_plh: 'Share a few words about your flight'
-        submit: 'Upload'
-        warnings:
-          name_html: "'Name field has to be filled'"
-          suit_html: "'Suit field has to be filled'"
-          loc_html: "'Place field has to be filled'"
-          file_html: "'Select a file to upload'"
-          file_ext_w1_html: "'File extension: '"
-          file_ext_w2_html: "'Supported only csv, tes and gpx formats'"
-          file_size_w1_html: "'File size : '"
-          file_size_w2_html: "'Max file size is 1 Mb'"
-        kind: "Kind of jump:"
-      desc: "The most advanced flight analysis and competition scoring"
-      goto_event: "Go to event >>"
-      supported_formats: "Supported file formats and GPS loggers"
-      stats: "Statistics:"
-      stats_tracks: "Uploaded tracks:"
-      stats_pilots: "Registered pilots:"
-      how_it_works: "It is pretty simple"
-      upload_a_file: "Upload a file"
-      select_free_fall_range: "Select free fall range"
-      analyze: "Analyze"
+        title: See and analyze your track
+        name_plh: John Doe
+        suit_plh: Wingsuit model
+        location_plh: Some DZ, some cliffs, etc
+        help: Supported csv (Columbus, FlySight), gpx, tes and kml format
+        comment_plh: Share a few words about your flight
+        submit: Upload
