--- a/config/locales/views/static_pages/index.ru.yml
+++ b/config/locales/views/static_pages/index.ru.yml
@@ -5,50 +5,20 @@ ru:
         base: BASE соревнования
         skydive: Skydive соревнования
     index:
-      title: 'Летай! Соревнуйся! Побеждай!'
-      subtitle: 'Все еще бета'
-      skyderby_is: 'Skyderby - это...'
-      tracks_analysis: 'Анализ GPS треков'
-      tracks_analysis_desc: 'Треки полетов в вингсьютах и трексьютах, skydive и b.a.s.e.'
-      tracks_list: 'Список треков'
-      online_competitions: 'Онлайн соревнования'
-      online_comp_desc: 'Участвуйте в онлайн соревнованиях в дисциплинах Дальность, Скорость, Время, Дистанция за время.'
-      online_comp_list: 'Онлайн соревнования'
-      events: 'Соревнования'
-      events_desc: 'Участвуйте в соревнованиях и проводите свои по правилам FAI или определенных организаторами.'
-      events_list: 'Список соревнований'
-      online_comps_leaders: 'Лидеры онлайн соревнований'
-      donate: 'Если Вам нравится Skyderby - Вы можете оказать проекту финансовую поддержку.'
+      title: Летай! Соревнуйся! Побеждай!
+      desc: Профессиональный анализ полетов и проведение соревнований
+      supported_formats: Поддерживаемые форматы и приборы
+      donate: Если Вам нравится Skyderby - Вы можете оказать проекту финансовую поддержку.
+      online_comps_leaders: Лидеры онлайн соревнований
+      how_it_works: Это очень просто
+      upload_a_file: Загрузите трек
+      select_free_fall_range: Выберите диапазон свободного падения
+      analyze: Анализируйте
       track_form:
-        title: 'Посмотреть и оценить трек'
-        name: 'Вас зовут'
-        name_plh: 'Имя Ф.'
-        suit: 'Вы летаете в'
-        suit_plh: 'Модель вингсьюта'
-        location: 'Локация'
-        location_plh: 'ДЗ, горы, и т.д.'
-        file: "Файл трека"
-        help: 'Поддерживаются файлы в формате csv, gpx, tes и kml'
-        comment: 'Комментарий'
-        comment_plh: 'Пара слов о Вашем полете'
-        submit: 'Загрузить'
-        warnings:
-          name_html: "'Вы не указали как Вас зовут.'"
-          suit_html: "'Вы не указали в чем Вы летали этот полет.'"
-          loc_html: "'Вы не указали где Вы летали.'"
-          file_html: "'Вы не выбрали файл.'"
-          file_ext_w1_html: "'Расширение файла : '"
-          file_ext_w2_html: "'Пожалуйтса, выберите файл с расширением csv, tes или gpx'"
-          file_size_w1_html: "'Размер файла : '"
-          file_size_w2_html: "'Размер файла не должен превышать 1 Мб'"
-        kind: "Вид прыжка:"
-      desc: "Профессиональный анализ полетов и проведение соревнований"
-      goto_event: "На страницу события >>"
-      supported_formats: "Поддерживаемые форматы и приборы"
-      stats: "Статистика:"
-      stats_tracks: "Загружено треков:"
-      stats_pilots: "Зарегистрировано пилотов:"
-      analyze: "Анализируйте"
-      select_free_fall_range: "Выберите диапазон свободного падения"
-      upload_a_file: "Загрузите трек"
-      how_it_works: "Это очень просто"
+        title: Посмотреть и оценить трек
+        name_plh: Имя Ф.
+        suit_plh: Модель вингсьюта
+        location_plh: ДЗ, горы, и т.д.
+        help: Поддерживаются файлы в формате csv, gpx, tes и kml
+        comment_plh: Пара слов о Вашем полете
+        submit: Загрузить
