--- a/config/locales/views/layouts/application.es.yml
+++ b/config/locales/views/layouts/application.es.yml
@@ -14,7 +14,7 @@ es:
       profile: Perfil
       upload_track: Descargar la pista
       competitions: Las competiciones
-      online_competitions: En línea competiciones
+      online_competitions: Competiciones en línea
       places: Ubicaciones
     footer:
       made_with: Hecho con amor
