--- a/config/locales/views/events/show.es.yml
+++ b/config/locales/views/events/show.es.yml
@@ -1,4 +1,4 @@
-en:
+es:
   events:
     show:
       competitor: Competitor
@@ -18,14 +18,14 @@ en:
       organizers: 'Organizers'
       organizers_placeholder: 'Add organizer from list'
       place_placeholder: 'Select place from list'
-      result: 'Result'
+      result: Resultado
       result_file: 'File with track'
       result_or: 'Or'
       result_in: 'in'
       delete_result: 'Delete result'
       toggle_new_track: 'upload new one'
       toggle_existed_track: 'select existed track'
-      weather_data: 'Wind conditions'
+      weather_data: Las condiciones climáticas
       wind_cancellation_enabled: 'This competition uses wind cancellation feature.'
       wind_cancellation_disabled: 'This competition does not use wind cancellation feature.'
       results_showing: 'Results are '
