--- a/config/locales/views/static_pages/index.es.yml
+++ b/config/locales/views/static_pages/index.es.yml
@@ -7,9 +7,9 @@ es:
     index:
       title: Vuele! Compita! Vence!
       desc: El más avanzado análisis de vuelo y puntajes de competencia
-      supported_formats: Supported file formats and GPS loggers
-      donate: If you like Skyderby - you can support the project by making a donation.
-      online_comps_leaders: Online competitions leaders
+      supported_formats: Formatos de archivo soportados para los seguimientos GPS
+      donate: Si te gusta Skyderby, puedes apoyar al proyecto realizando una donación.
+      online_comps_leaders: Tabla de posiciones online
       how_it_works: "Es muy simple:"
       upload_a_file: Sube un archivo
       select_free_fall_range: Selecciona un rango para salto libre
