--- a/config/locales/views/tracks/index.es.yml
+++ b/config/locales/views/tracks/index.es.yml
@@ -1,4 +1,8 @@
 es:
   tracks:
     index:
-      title: 'Pistas descargadas:'
+      all: Todos
+      filters: Filtros
+      filter_by_pilot: Por persona
+      filter_by_place: Por lugar
+      filter_by_suit: Por traje
