--- a/config/locales/views/tracks/index.fr.yml
+++ b/config/locales/views/tracks/index.fr.yml
@@ -1,9 +1,9 @@
 fr:
   tracks:
     index:
-      track_not_found: 'Track #%{id} has not found'
-      all: All
+      track_not_found: 'Enregistrement #%{id} non trouvé'
+      all: Tous
       filters: Filtres
-      filter_by_pilot: Par pilot
+      filter_by_pilot: Par pilote
       filter_by_suit: Par combinaison
       filter_by_place: Par lieu
