--- a/config/locales/views/virtual_competitions/person_details.it.yml
+++ b/config/locales/views/virtual_competitions/person_details.it.yml
@@ -1,4 +1,4 @@
 en:
   virtual_competitions:
     person_details:
-      modal_title: Best results in competition
+      modal_title: Migliori risultati in competizione
